crates/recite-parser/tests/snapshots/parser__fixture_support__fixtures_recite_invalid_parser_directive_boundaries_diagnostics_txt.snap
---
source: crates/recite-parser/tests/../../../tests/support/fixtures.rs
expression: actual
---
diagnostics:
- code: RECITE_PARSE001
  severity: Error
  message: expected a Recite statement header or indented prose
  file: fixtures/recite/invalid/parser_directive_boundaries.recite
  line: 1
  column: 1
- code: RECITE_PARSE001
  severity: Error
  message: expected a Recite statement header or indented prose
  file: fixtures/recite/invalid/parser_directive_boundaries.recite
  line: 2
  column: 1
- code: RECITE_PARSE001
  severity: Error
  message: expected a Recite statement header or indented prose
  file: fixtures/recite/invalid/parser_directive_boundaries.recite
  line: 3
  column: 1
- code: RECITE_PARSE001
  severity: Error
  message: expected a Recite statement header or indented prose
  file: fixtures/recite/invalid/parser_directive_boundaries.recite
  line: 4
  column: 1
