crates/recite-parser/tests/snapshots/parser__fixture_support__fixtures_recite_invalid_parser_mixed_indent_diagnostics_txt.snap
---
source: crates/recite-parser/tests/../../../tests/support/fixtures.rs
expression: actual
---
diagnostics:
- code: RECITE_PARSE007
  severity: Error
  message: mixed indentation inside statement body
  file: fixtures/recite/invalid/parser_mixed_indent.recite
  line: 4
  column: 5
