crates/recite-parser/tests/snapshots/parser__fixture_support__fixtures_recite_valid_core_language_spike_diagnostics_txt.snap
---
source: crates/recite-parser/tests/../../../tests/support/fixtures.rs
expression: actual
---
diagnostics:
<none>
