crates/recite-parser/tests/snapshots/parser__fixture_support__fixtures_recite_valid_core_language_spike_lowered_txt.snap
---
source: crates/recite-parser/tests/../../../tests/support/fixtures.rs
expression: actual
---
source_file: fixtures/recite/valid/core_language_spike.recite
blocks:
- block start default=true speaker=narrator metadata=[]
  - comment "scene opener" @ 2:1
  - line intro_001 speaker=hazel text="Welcome to the fixture." metadata=[mood, mood]
    - choice ask_work text="Ask about work." target=work metadata=[]
    - if trusts(player)
      then:
        - line secret_001 speaker=<none> text="I can tell you." metadata=[]
  - effect Deferred advance_thread(start, asked)
  - divert END
- block work default=false speaker=<none> metadata=[]
  - line work_001 speaker=<none> text="Work waits." metadata=[]
  - divert END
