crates/recite-parser/tests/snapshots/parser__fixture_support__fixtures_recite_valid_language_pressure_lowered_txt.snap
---
source: crates/recite-parser/tests/../../../tests/support/fixtures.rs
expression: actual
---
source_file: fixtures/recite/valid/language_pressure.recite
blocks:
- block marche.default default=true speaker=élise metadata=[location, location]
  - comment "Shared pressure fixture: stable IDs, interpolation, plural source forms, and markup." @ 2:1
  - line arrivée.interpolée@55667788990011223344 speaker=élise text="[slow]The tide is turning, {traveller_name}.[/slow]" metadata=[mood, mood]
    - choice ask_news@66778899001122334455 text="Tell me about {topic}." target=letters metadata=[tone]
  - divert END
- block letters default=false speaker=<none> metadata=[]
  - line letters.ledger@0a1b2c3d4e5f60718293 speaker=élise text="You have one letter." metadata=[]
  - line letters.close@77889900112233445566 speaker=archivist text="The ledger closes." metadata=[]
  - divert END
